--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,21 @@
   },
   "author": "wade.li",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
+    "autobind-decorator": "^2.4.0",
+    "immutable": "^4.1.0",
     "next": "12.2.5",
+    "next-redux-wrapper": "^7.0.5",
     "next-seo": "^5.5.0",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.54.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.18.10",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5"
   }
