--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "autobind-decorator": "^2.4.0",
+    "axios": "^0.27.2",
     "immutable": "^4.1.0",
     "next": "12.2.5",
     "next-redux-wrapper": "^7.0.5",
