--- a/backend/package.json
+++ b/backend/package.json
@@ -1,34 +1,45 @@
 {
-  "name": "realworld-backend",
-  "version": "1.0.0",
-  "description": "realworld backend demo project built with Express.js + Knex",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "knex"
-  ],
-  "author": "wade.li",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "colors": "^1.4.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-promise-router": "^4.1.1",
-    "express-validation": "^4.1.0",
-    "helmet": "^5.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^2.2.0",
-    "lodash": "^4.17.21",
-    "method-override": "^3.0.0",
-    "moment": "^2.29.4",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "uuid": "^8.3.2",
-    "winston": "^3.8.1"
-  }
+	"name": "realworld-backend",
+	"version": "1.0.0",
+	"description": "realworld backend demo project built with Express.js + Knex",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"lint": "eslint \"**/*.js\"",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"knex"
+	],
+	"author": "wade.li",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.20.0",
+		"colors": "^1.4.0",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"express-promise-router": "^4.1.1",
+		"express-validation": "^4.1.0",
+		"helmet": "^5.1.1",
+		"jsonwebtoken": "^8.5.1",
+		"knex": "^2.2.0",
+		"lodash": "^4.17.21",
+		"method-override": "^3.0.0",
+		"moment": "^2.29.4",
+		"morgan": "^1.10.0",
+		"mysql": "^2.18.1",
+		"uuid": "^8.3.2",
+		"winston": "^3.8.1",
+		"winston-transport": "^4.5.0"
+	},
+	"devDependencies": {
+		"@babel/eslint-parser": "^7.18.9",
+		"@babel/preset-env": "^7.18.10",
+		"@babel/preset-react": "^7.18.6",
+		"babel-preset-airbnb": "^5.0.0",
+		"eslint": "^8.22.0",
+		"eslint-config-airbnb-base": "^15.0.0"
+	}
 }
