--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev -p 3001",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "eslint --quiet \"**/*.js\""
 	},
 	"author": "wade.li",
 	"dependencies": {
@@ -25,8 +25,13 @@
 		"sass": "^1.54.4"
 	},
 	"devDependencies": {
+		"@babel/eslint-parser": "^7.18.9",
 		"@babel/plugin-proposal-decorators": "^7.18.10",
-		"eslint": "8.22.0",
+		"@babel/preset-env": "^7.18.10",
+		"@babel/preset-react": "^7.18.6",
+		"babel-preset-airbnb": "^5.0.0",
+		"eslint": "^8.22.0",
+		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-next": "12.2.5"
 	}
 }
