--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@reduxjs/toolkit": "^1.8.4",
 		"autobind-decorator": "^2.4.0",
 		"axios": "^0.27.2",
+		"classnames": "^2.3.1",
 		"immutable": "^4.1.0",
 		"next": "12.2.5",
 		"next-redux-wrapper": "^7.0.5",
