--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -7,7 +7,8 @@
 	},
 	"parser": "@babel/eslint-parser",
 	"extends": [
-		"airbnb-base", "next"
+		"airbnb-base",
+		"next"
 	],
 	"parserOptions": {
 		"ecmaVersion": 12
@@ -51,6 +52,7 @@
 				"ignoreComments": true,
 				"ignoreTemplateLiterals": true
 			}
-		]
+		],
+		"@next/next/no-css-tags": "off"
 	}
 }
