--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     environment:
       - TZ=UTC
       - NODE_ENV=production
+      - NEXT_PUBLIC_DOMAIN=http://localhost:5600
 
 networks:
   default:
