--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     environment:
       - TZ=UTC
       - NODE_ENV=production
-      - NEXT_PUBLIC_DOMAIN=http://localhost:5600
+      - NEXT_PUBLIC_DOMAIN=18.163.198.37
 
 networks:
   default:
