--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 	"author": "wade.li",
 	"license": "ISC",
 	"dependencies": {
+		"aws-sdk": "^2.1199.0",
 		"body-parser": "^1.20.0",
 		"colors": "^1.4.0",
 		"compression": "^1.7.4",
@@ -26,10 +27,11 @@
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^2.2.0",
 		"lodash": "^4.17.21",
+		"mem": "^6.1.1",
 		"method-override": "^3.0.0",
 		"moment": "^2.29.4",
 		"morgan": "^1.10.0",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.3.3",
 		"uuid": "^8.3.2",
 		"winston": "^3.8.1",
 		"winston-transport": "^4.5.0"
