--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - TZ=UTC
       - NODE_ENV=production
       - NEXT_PUBLIC_DOMAIN=18.163.198.37
+      - NEXT_PUBLIC_ACCESS_TOKEN_KEY=REALWORLD_LOCAL_ACCESS_TOKEN
 
 networks:
   default:
