--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"nextjs-progressbar": "^0.0.14",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-redux": "^8.0.2",
 		"redux": "^4.2.0",
 		"redux-thunk": "^2.4.1",
 		"sass": "^1.54.4"
