--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
 TZ=UTC
 NODE_ENV=production
-NEXT_PUBLIC_DOMAIN=18.163.198.37:5600
+NEXT_PUBLIC_DOMAIN=
 NEXT_PUBLIC_ACCESS_TOKEN_KEY=REALWORLD_LOCAL_ACCESS_TOKEN
