--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"express": "^4.18.1",
 		"express-promise-router": "^4.1.1",
 		"express-validation": "^4.1.0",
+		"flat": "^5.0.2",
 		"helmet": "^5.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^2.2.0",
@@ -32,6 +33,7 @@
 		"moment": "^2.29.4",
 		"morgan": "^1.10.0",
 		"mysql2": "^2.3.3",
+		"slugify": "^1.6.5",
 		"uuid": "^8.3.2",
 		"winston": "^3.8.1",
 		"winston-transport": "^4.5.0"
