--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
 		"immutable": "^4.1.0",
+		"moment": "^2.29.4",
 		"next": "12.2.5",
 		"next-redux-wrapper": "^7.0.5",
 		"next-seo": "^5.5.0",
