--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
 		"react-dom": "18.2.0",
 		"react-redux": "^8.0.2",
 		"redux": "^4.2.0",
+		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.4.1",
 		"sass": "^1.54.4"
 	},
