Add article api : list

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"aws-sdk": "^2.1199.0",
+		"bluebird": "^3.7.2",
 		"body-parser": "^1.20.0",
 		"colors": "^1.4.0",
 		"compression": "^1.7.4",
