--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"lint": "eslint \"**/*.js\"",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"keywords": [
 		"knex"
@@ -44,7 +44,22 @@
 		"@babel/preset-env": "^7.18.10",
 		"@babel/preset-react": "^7.18.6",
 		"babel-preset-airbnb": "^5.0.0",
+		"chance": "^1.1.8",
 		"eslint": "^8.22.0",
-		"eslint-config-airbnb-base": "^15.0.0"
+		"eslint-config-airbnb-base": "^15.0.0",
+		"jest": "^29.0.1",
+		"supertest": "^6.2.4"
+	},
+	"jest": {
+		"verbose": true,
+		"testMatch": [
+			"<rootDir>/__tests__/*.spec.js"
+		],
+		"collectCoverage": true,
+		"coverageDirectory": ".coverage",
+		"coveragePathIgnorePatterns": [
+			"/node_modules/",
+			"test.js"
+		]
 	}
 }
