--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
 		"express-promise-router": "^4.1.1",
 		"express-validation": "^4.1.0",
 		"flat": "^5.0.2",
-		"helmet": "^5.1.1",
+		"helmet": "^4.6.0",
+		"joi-to-swagger": "^6.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^2.2.0",
 		"lodash": "^4.17.21",
@@ -34,6 +35,7 @@
 		"moment": "^2.29.4",
 		"morgan": "^1.10.0",
 		"mysql2": "^2.3.3",
+		"pug": "^3.0.2",
 		"slugify": "^1.6.5",
 		"uuid": "^8.3.2",
 		"winston": "^3.8.1",
