Update lint config

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev -p 3000",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint --quiet \"**/*.js\""
+		"lint": "eslint --quiet \"**/*.js*\""
 	},
 	"author": "wade.li",
 	"dependencies": {
